# gnu_gclip-select

./: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  gclip_select.c  gclip_select.vala
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gclip_select/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  gclip_select.c  gclip_select.vala  libtool
gclip_select/.deps/: gclip_select.Po
gclip_select/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
